--- a/_config.yml
+++ b/_config.yml
@@ -24,13 +24,13 @@ gems:
   - jekyll-geo-pattern
   - rouge
   - kramdown
-  - jekyll-github-metadata
+#  - jekyll-github-metadata
 
 # Build settings
-markdown: kramdown
-highlighter: rouge
-lsi:         false
-excerpt_separator: "\n\n"
+# markdown: kramdown
+# highlighter: rouge
+# lsi:         false
+# excerpt_separator: "\n\n"
 
 source:      .
 destination: ./_site
@@ -38,9 +38,9 @@ destination: ./_site
 quiet:    false
 defaults: []
 
-kramdown:
-  input: GFM
-  enable_coderay: true
+# kramdown:
+#  input: GFM
+#  enable_coderay: true
 
 # Disque
 disque: tt-cc.disqus.com
