--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ gems:
   - jekyll-github-metadata
 
 # Build settings
-# markdown: kramdown
+markdown: kramdown
  highlighter: rouge
  lsi:         false
  excerpt_separator: "\n\n"
