--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,10 @@ destination: ./_site
 quiet:    false
 defaults: []
 
+# Plugins
+gems:
+  - jekyll-seo-tag
+
 # Pagination
 permalink: /:categories/:title/
 paginate: 10
