--- a/_config.yml
+++ b/_config.yml
@@ -26,8 +26,8 @@ defaults: []
 gems:
   - jekyll-seo-tag
   - jekyll-press
-  - jekyll-tagging
-  - jekyll-lunr-js-search
+#  - jekyll-tagging
+#  - jekyll-lunr-js-search
 
 # Pagination
 permalink: /:categories/:title/
