fixed some issues

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ gems:
   - jekyll-geo-pattern
   - jekyll-sitemap
   - jekyll-seo-tag
-  - jekyll-github-metadata
+#  - jekyll-github-metadata
 
 # Where things are
 collections:
