--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,8 @@ name: 汀汀涔涔
 email: ttccmvp@gmail.com
 location: Chengdu, Sichuang
 github_url: https://github.com/imwr
-description: This is personal website of ttcc
+weibo_url: https://weibo.com/imwr
+description: Personal Website of TTCC
 url: http://tt-cc.cn
 
 # About/contact
@@ -20,6 +21,7 @@ gems:
   - jekyll-geo-pattern
   - jekyll-sitemap
   - jekyll-seo-tag
+  - jekyll-feed
   - jekyll-redirect-from
   - jekyll-github-metadata
 
@@ -50,13 +52,13 @@ defaults:
       path: ""
       type: my_categories
     values:
-      layout: blog_by_category
+      layout: category
   -
     scope:
       path: ""
       type: my_tags
     values:
-      layout: blog_by_tag
+      layout: tag
 
 # Navigation
 navs:
@@ -108,3 +110,32 @@ skill_web_keywords: [HTML, CSS, JS, JQuery, Ajax, AngularJS, MongoDB, Redis,  Bo
 
 # Exclude metadata and development time dependencies (like Grunt plugins)
 exclude: [README.markdown, package.json, grunt.js, Gruntfile.js, node_modules]
+
+
+#test
+github-test:
+  public_repositories:
+    -
+      name: fa2png.io - v21
+      stargazers_count: 0
+      forks_count: 22
+      updated_at: 2015-12-12
+      stargazers_count: 1
+      description: 这是是一个啦减肥啦手机发的啦快速减肥卢卡斯地方
+      fork: false
+    -
+      name: fa2png.io - v22
+      stargazers_count: 0
+      forks_count: 22
+      updated_at: 2015-12-12
+      stargazers_count: 1
+      description: 这是是一个啦减肥啦手机发的啦快速减肥卢卡斯地方
+      fork: false
+    -
+      name: fa2png.io - v23
+      stargazers_count: 0
+      forks_count: 22
+      updated_at: 2015-12-12
+      stargazers_count: 1
+      description: 这是是一个啦减肥啦手机发的啦快速减肥卢卡斯地
+      fork: false
