--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ gems:
   - jekyll-feed
   - jekyll-redirect-from
   - kramdown
-#  - jekyll-github-metadata
+  - jekyll-github-metadata
 
 # Where things are
 collections:
@@ -118,8 +118,8 @@ exclude: [README.markdown, package.json, grunt.js, Gruntfile.js, node_modules]
 
 
 #test
-easydebug: true
-github:
+easydebug: 
+github-test:
   public_repositories:
     -
       name: fa2png.io - v21
