--- a/_config.yml
+++ b/_config.yml
@@ -108,6 +108,7 @@ kramdown:
 
 # Sidebar to show popular repo
 side_bar_repo_limit: 5
+pattern_module: 8
 
 # Disque
 disque: tt-cc.disqus.com
@@ -115,9 +116,9 @@ disque: tt-cc.disqus.com
 google_tracking_id : 'UA-79713062-1'
 
 # For about.html. Fell free to create your own!
-skill_software_keywords: [Java, Objective C, MySQL, MongoDB, SSDB, Redis，Lua]
+skill_software_keywords: [Java, Objective C, MySQL, MongoDB, SSDB, Redis, Lua]
 skill_j2ee_keywords: [SpringMvc, Struct, MyBatis, Velocity]
-skill_web_keywords: [HTML, CSS, JS, JQuery, Ajax, AngularJS, Boostrap]
+skill_web_keywords: [HTML, CSS, JS, JQuery, AngularJS, Boostrap, Ajax]
 
 # Exclude metadata and development time dependencies (like Grunt plugins)
 exclude: [README.markdown, package.json, grunt.js, Gruntfile.js, node_modules]
@@ -142,6 +143,22 @@ github-test:
       updated_at: 2015-12-12
       stargazers_count: 1
       description: 这是是一个啦减肥啦手机发的啦快速减肥卢卡斯地方这是是一个啦减肥啦手机发的啦快速减肥卢卡斯地方
+      fork: false
+    -
+      name: fa2png.io - v23
+      stargazers_count: 0
+      forks_count: 22
+      updated_at: 2015-12-12
+      stargazers_count: 1
+      description: 这是是一个啦减肥啦手机发的啦快速减肥卢卡斯地
+      fork: false
+    -
+      name: fa2png.io - v23
+      stargazers_count: 0
+      forks_count: 22
+      updated_at: 2015-12-12
+      stargazers_count: 1
+      description: 这是是一个啦减肥啦手机发的啦快速减肥卢卡斯地
       fork: false
     -
       name: fa2png.io - v23
