--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ location: Chengdu, Sichuang
 github_url: https://github.com/imwr
 weibo_url: https://weibo.com/imwr
 description: 汀汀涔涔 TT-CC
-url: http://tt-cc.cn
+url: http://tt-cc.cc
 
 # About/contact
 author:
@@ -121,3 +121,8 @@ skill_web_keywords: [HTML, CSS, JS, JQuery, AngularJS, Boostrap, Ajax]
 
 # Exclude metadata and development time dependencies (like Grunt plugins)
 exclude: [README.markdown, package.json, grunt.js, Gruntfile.js, node_modules]
+
+#test
+easydebug:
+github:
+  public_repositories:
