--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,9 @@ collections:
   my_tags:
     output: true
     permalink: /tag/:name/
+  my_snippet:
+    output: true
+    permalink: /snippet/:name/
 
 defaults:
   -
@@ -59,15 +62,18 @@ defaults:
       type: my_tags
     values:
       layout: tag
+  -
+    scope:
+      path: ""
+      type: my_snippet
+    values:
+      layout: post
 
 # Navigation
 navs:
   -
     href: /
     label: Home
-  -
-    href: /open-source
-    label: Open-Source
   -
     href: /blog
     label: Blog
@@ -82,20 +88,22 @@ navs:
         href: /category/web-game/
         label: Web-Game
   -
-    href: /tag
-    label: Tags
+    href: /open-source
+    label: Open-Source
+  -
+    href: /snippet
+    label: Snippets
   -
     href: /category
     label: Categories
+  -
+    href: /tag
+    label: Tags
 
 # Pagination
 permalink: /:categories/:title/
 paginate: 5
 paginate_path: "/blog/page:num/"
-
-# Where are tags and categories displayed
-tag_page: tag
-category_page: category
 
 # github metadata
 repository: imwr/imwr.github.com
@@ -114,7 +122,7 @@ disque: tt-cc.disqus.com
 # Google Analytics
 google_tracking_id : 'UA-79713062-1'
 
-# For about.html. Fell free to create your own!
+# skills
 skill_software_keywords: [Java, Python3, Objective C, MySQL, MongoDB, SSDB, Redis, Lua]
 skill_j2ee_keywords: [SpringMvc, Struct, MyBatis, Velocity]
 skill_web_keywords: [HTML, CSS, JS, JQuery, AngularJS, Nodejs, Boostrap, Ajax, Django]
