--- a/_config.yml
+++ b/_config.yml
@@ -123,14 +123,14 @@ disque: tt-cc.disqus.com
 google_tracking_id : 'UA-79713062-1'
 
 # skills
-skill_software_keywords: [Java, Python3, Objective C, MySQL, MongoDB, SSDB, Redis, Lua]
+skill_software_keywords: [Java, Python3, Objective C, MySQL, MongoDB, SSDB, Redis, Lua, Hive]
 skill_j2ee_keywords: [SpringMvc, Struct, MyBatis, Velocity]
-skill_web_keywords: [HTML, CSS, JS, JQuery, AngularJS, Nodejs, Boostrap, Ajax, Django]
+skill_web_keywords: [HTML, CSS, JS, JQuery, AngularJS, Boostrap, Ajax, Django, Nodejs]
 
 # Exclude metadata and development time dependencies (like Grunt plugins)
 exclude: [README.markdown, package.json, grunt.js, Gruntfile.js, node_modules]
 
 #test
-easydebug:
+easydebug: false
 github:
-  public_repositories:
+  public_repositories: []
