--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ gems:
   - jekyll-seo-tag
   - jekyll-feed
   - jekyll-redirect-from
+  - rouge
   - kramdown
   - jekyll-github-metadata
 
@@ -35,7 +36,7 @@ collections:
     permalink: /tag/:name/
   my_snippet:
     output: true
-    permalink: /snippet/:name/
+    permalink: /snippet/:title/
 
 defaults:
   -
@@ -109,9 +110,19 @@ paginate_path: "/blog/page:num/"
 repository: imwr/imwr.github.com
 
 # kramdown
+markdown:       kramdown
+highlighter:    rouge
 kramdown:
-  input: GFM
-  syntax_highlighter: true
+  input:                     GFM
+  auto_ids:                  true
+  footnote_nr:               1
+  entity_output:             as_char
+  toc_levels:                1..6
+  smart_quotes:              lsquo,rsquo,ldquo,rdquo
+  enable_coderay:            false
+  hard_wrap:                 false
+  syntax_highlighter:        rouge
+  footnote_backlink:         "&#8617;&#xfe0e;"
 
 # Sidebar to show popular repo
 side_bar_repo_limit: 5
